# pnc-eval

./: .gitignore  Makefile  README.md  TODO  environment.yml  evaluate_model_on_generator.py  load_data_in.R  mean_change_example.yaml  model.py  sanity-check.ipynb  score_functions.py  test_change_type.npz  window_slide.py
base_package/: pyproject.toml
base_package/src/: pyproject.toml
base_package/src/PySeq.egg-info/: PKG-INFO  SOURCES.txt
base_package/src/pyseq/models/thresholders/: _old_rework_segmentation_threshold_model.py
base_package/tst/: test_pyseq_import.py
bench_package/data_generators/: dataset_generation.py  generate_all_properties.py  run_dataset_generation.py
config/: amplitude-gradual-cons.yaml  amplitude-gradual-osc.yaml  amplitude-stepped-cons.yaml  amplitude-stepped-osc.yaml  change_types.yaml  frequency-gradual-cons.yaml  frequency-gradual-osc.yaml  frequency-stepped-cons.yaml  frequency-stepped-osc.yaml  noise-gradual-cons.yaml  noise-gradual-osc.yaml  noise-stepped-cons.yaml  noise-stepped-osc.yaml  perturbation-gradual-cons.yaml  perturbation-gradual-osc.yaml  perturbation-stepped-cons.yaml  perturbation-stepped-osc.yaml  wald-constant-thresholder.yaml  window_slider.yaml
config/generators/: amplitude-gradual-cons.yaml  amplitude-gradual-osc.yaml  amplitude-stepped-osc.yaml  frequency-gradual-cons.yaml  frequency-gradual-osc.yaml  frequency-stepped-cons.yaml  (+8 more)
pyseq_data/: pyproject.toml
pyseq_data/src/pyseq_data/: README.md  dataset_generation_classes.py  example_config.yaml  make_signal.py  old_dataset_generation.py  utilities.py
pyseq_data/src/pyseq_data.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
seqbench/: evaluate_model_on_generator.py  run_dataset_generation.py
slurm/: generate-slurm-scripts.py
utils/: generate-config-txt.sh  slurmscript.jinja
(+93 files in other folders)
