[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PySeq"
version = "2026.0.0"
dependencies = [
   "numpy", "scipy", "matplotlib", "scikit-learn", "pyyaml" 
]
requires-python = ">=3.11"
authors = [
  {name = "Roel Bouman", email = "roel.bouman@ru.nl"},
  {name = "Janneke Verbeek", email = "janneke.verbeek@ru.nl"},
]
maintainers = [
  {name = "Roel Bouman", email = "roel.bouman@ru.nl"},
  {name = "Janneke Verbeek", email = "janneke.verbeek@ru.nl"},
]
description = "Changepoint detection benchmarking package."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["changepoint detection"]  # fill out
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]   # Dependencies for testing
dev = ["pytest"]
tensorflow = ["gpflow", "tensorflow", "tensorflow-probability"]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
spam-cli = "spam:main_cli"

[project.gui-scripts]
spam-gui = "spam:main_gui"

[project.entry-points."spam.magical"]
tomatoes = "spam:main_tomatoes"